# bus-eta

./: .dockerignore  .gitignore  DEPLOY.md  Dockerfile  EnturRealtimeEDA.ipynb  Public Transportation Delay Study.ipynb  README.md  aggregate_legs.py  calculate_legs.py  docker-compose.yml  download_entur.py  export_dash_parquets.py  mise.toml  pyproject.toml  s3_cors_config.xml  webapp.py
.github/workflows/: push_frontend_to_cdn.yml  push_webapp_image.yml
frontend/: README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: About.tsx  App.tsx  Comparison.tsx  HotSpots.tsx  LegStats.tsx  Loader.tsx  Routes.tsx  UrlParams.ts  api.ts  index.css  main.tsx
frontend/src/components/: ComparisonMap.tsx  MapComponent.tsx  NavBar.tsx  Selector.tsx
kollektivkart/: __init__.py  __main__.py  about.py  api.py  comparisonview.py  global_inputs.py  initdb.py  mapview.py  queries.py  webapp.py
kollektivkart/etl/: __main__.py  leg_stats.py  legs.py  mkdb.py  partitioning.py  sync.py
notebooks/: CompareDuckDbWithPg.ipynb  LineStudy.ipynb  LinesEDA.ipynb
scripts/: aggregations_for_app.py  calculate_parquet_legs.py  sync_parquets.py
