[project]
name = "bus-eta"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.2.0",
    "google-cloud-bigquery-storage>=2.28.0",
    "google-cloud-bigquery>=3.29.0",
    "jupyter>=1.1.1",
    "pyarrow>=19.0.0",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
    "pandas>=2.2.3",
    "db-dtypes>=1.4.1",
    "jupysql>=0.10.17",
    "notebook>=7.3.2",
    "psutil>=7.0.0",
    "plotly>=6.0.0",
    "dash>=2.18.2",
    "gunicorn>=23.0.0",
]
