[project]

name = "bus-eta"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.2.2",
    "pyarrow>=19.0.0",
    "pandas>=2.2.3",
    "db-dtypes>=1.4.1",
    "gunicorn>=23.0.0",
    "orjson>=3.10.18",
    "flask>=3.1.1",
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.1.1",
    "jupysql>=0.10.17",
    "notebook>=7.3.2",
    "seaborn>=0.13.2",
]
scripts = [
    "google-cloud-bigquery-storage>=2.28.0",
    "google-cloud-bigquery>=3.29.0",
    "tqdm>=4.67.1",
    "psutil>=7.0.0",
]
